--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
   
   <body>
   
+    <article>
 
-    <h3>Heading</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, dolore, provident, aut, et dicta nisi voluptatum odio illum neque saepe minima alias atque perferendis a vel molestias amet ut eius.</p>
-    
-    <img src="flickr://Super Meat Boy" alt=""> 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, dolore, provident, aut, et dicta nisi voluptatum odio illum neque saepe minima alias atque perferendis a vel molestias amet ut eius.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, dolore, provident, aut, et dicta nisi voluptatum odio illum neque saepe minima alias atque perferendis a vel molestias amet ut eius.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, dolore, provident, aut, et dicta nisi voluptatum odio illum neque saepe minima alias atque perferendis a vel molestias amet ut eius.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, dolore, provident, aut, et dicta nisi voluptatum odio illum neque saepe minima alias atque perferendis a vel molestias amet ut eius.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, dolore, provident, aut, et dicta nisi voluptatum odio illum neque saepe minima alias atque perferendis a vel molestias amet ut eius.</p>
 
+    </article>
+
+    <a href="#">Hide</a>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
+    <script src="js/readmore.js"></script>
     <script src="js/scripts.js"></script>
   
   </body>
